# litmus

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  framework_test.py  pyproject.toml  requirements.txt
.github/workflows/: rust.yml
benchmarking/: docker-compose.yml
benchmarking/litmus_test/: Dockerfile  requirements.txt
benchmarking/uvicorn_test/: Dockerfile  requirements.txt
litmus/: __init__.py  adapters.py  overrides.py  shared.py
litmus-framework/: Cargo.toml
litmus-framework/src/: lib.rs
litmus-server/: Cargo.toml
litmus-server/src/: client.rs  event_loop.rs  lib.rs  lsgi.rs  manager.rs  psgi.rs  server.rs  settings.rs  traits.rs  transport.rs
litmus-server/src/net/: listener.rs  stream.rs
litmus-server/src/protocols/: h1.rs  mod.rs  selector.rs
litmus-server/src/responders/: mod.rs  receiver.rs  sender.rs
litmus/framework/: __init__.py  app.py  converters.py  models.py  request.py  responses.py  router.py  sessions.py
litmus/server/: __init__.py  adapters.py
messures/: oof.py  plot_scores.py
pyre/: __init__.py  protocol.py  route_mapper.py
pyre-framework/: Cargo.toml
pyre-framework/src/: lib.rs
pyre-server/: Cargo.toml
pyre-server/src/: client.rs  event_loop.rs  lib.rs  manager.rs  protocol_manager.rs  psgi.rs  server.rs  settings.rs  switch.rs  transport.rs
pyre-server/src/net/: listener.rs  mod.rs  stream.rs
pyre-server/src/protocols/: h1.rs
pyre-server/src/responders/: receiver.rs  sender.rs
pyre/framework/: __init__.py  app.py  converters.py  fillers.py  models.py  request.py  responses.py  router.py  sessions.py
pyre/helpers/: __init__.py  route_mapper.py
pyre/router/: __init__.py  endpoints.py  router.py
pyre/server/: __init__.py  asyncio_impl.py  dummy.py  server.py  shared.py  trio_impl.py
pyre_/framework/: __init__.py  converters.py
src/: asgi.rs  lib.rs  protocol.rs
src/asyncio/: mod.rs
src/framework/: framework.rs  mod.rs
src/http/: mod.rs
src/pyre_server/: abc.rs  asgi.rs  client.rs  event_loop.rs  mod.rs  protocol_manager.rs  py_callback.rs  server.rs  settings.rs  switch.rs  transport.rs
src/pyre_server/net/: listener.rs  metalio.rs  mod.rs  server.rs  stream.rs
src/pyre_server/parser/: h1.rs  mod.rs
src/pyre_server/protocols/: h1.rs
src/pyre_server/responders/: data_callback.rs  mod.rs  receiver.rs  sender.rs
src/pyre_server/utils/: buff.rs  mod.rs
src/server/: asgi.rs  flow_control.rs  mod.rs
src/server/http/: mod.rs
src/server/net/: handler.rs  listener.rs  mod.rs
src/server/parser/: chunked.rs  mod.rs  parser.rs
src/server/protocols/: h11.rs  mod.rs
src/utils/: mod.rs
tests/: example.py  latency.py  litmus-framework-fastapi.py  pyre-framework-fastapi.py  t1.py  t2.py  test_framework.py  test_pyre_and_uvicorn.py  test_pyre_fastapi.py  test_pyre_framework.py  test_pyre_raw.py  test_uvicorn_fastapi.py  test_uvicorn_framework.py  test_uvicorn_raw.py  uvicorn-framework-fastapi.py
tests/other/: example.py  fapi.py  t1.py
tests/python/: unit_url_regex_test.py
tests/random/: client_test.py  instance_decos.py  test_listener.py  transport_test.py  uv.py
tests/unit/: unit_converter_test.py  unit_url_regex_test.py
