[package]
name = "litmus"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "litmus"
crate-type = ["cdylib"]

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git"
branch = "main"
features = ["extension-module"]

[dependencies]
litmus-server = { version = "*", path = "litmus-server" }
pretty_env_logger = "0.4.0"
timed = "0.2.1"
once_cell = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version="^0.3.2", features = ["disable_initial_exec_tls", "background_threads"] }

[profile.release]
lto = "fat"
codegen-units = 1