[package]
name = "pyre-server"
version = "0.1.1"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git"
features = ["extension-module"]

[dependencies]
http = "0.2"
httparse = "1.3.5"
httpdate = "0.3"
headers = "0.3"

bytes = "1.0.1"
rustc-hash = "1.1.0"
crossbeam = "0.8.0"
slab = "0.4"
