[package]
name = "pyre-server"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[dependencies]
http = "0.2"
httparse = "1.4.1"
httpdate = "1"
headers = "0.3"

bytes = "1.0.1"
crossbeam = "0.8.0"
slab = "0.4"

log = "0.4"
timed = "0.2.1"

[profile.release]
lto = "fat"
codegen-units = 1